--- a/app/views/projects/status_messages/_list.html.haml
+++ b/app/views/projects/status_messages/_list.html.haml
@@ -1,6 +1,7 @@
-%h2= StatusMessage.model_name.human
-%span.actions.tipped= link_to image_tag("/images/icons-nancy/statusMessage-create.gif"), new_project_status_message_path(@project)
-%hr.clear/
+.title
+  %h2
+    = StatusMessage.model_name.human
+    %span.actions.tipped= link_to image_tag("/images/icons-nancy/statusMessage-create.gif"), new_project_status_message_path(@project)
 .details
   %ul.toolbar
     %li.from #{StatusMessage.human_attribute_name('created_at')} / #{User.model_name.human}
