--- a/app/views/customers/index.html.haml
+++ b/app/views/customers/index.html.haml
@@ -1,7 +1,7 @@
 = render 'customers/form' if can? :manage, Customer, Location, Contact
 .filter
   %ul
-    %li= link_to t(:customer_form_create), new_customer_path
+    %li.right= link_to t(:customer_form_create), new_customer_path
     .clear
 .toolbar
   %ul
