--- a/app/views/projects/status_messages/_form.html.haml
+++ b/app/views/projects/status_messages/_form.html.haml
@@ -1,22 +1,24 @@
-= form_for([@project, @status_message], :html => { :multipart => true }, :builder => TippedFormBuilder) do |f|
-  %fieldset
-    %legend= t('helpers.form', :model=> StatusMessage.model_name.human)
-    -if @status_message.errors.any?
-      .errors
-        %h3= t('errors.template.header', :model=> StatusMessage.model_name.human, :count=> @status_message.errors.count)
-        %ul
-          - @status_message.errors.full_messages.each do |msg|
-            %li= msg
-        .clear
-    %ul
-      %li.field.threeColumn.tipped
-        = f.label :title
-        = f.text_field :title
-      %li.field.file.tipped
-        = f.file_field :attachment
-  .buttons
-    %ul
-      %li.toggle= link_to 'Abbrechen', @project
-      %li.submit
-        = f.submit t('helpers.submit.submit', :model=> StatusMessage.model_name.human), :class => "submit"
-    .clear
+.title.active
+  %h2= t('helpers.form', :model=> StatusMessage.model_name.human)
+  .clear
+  = form_for([@project, @status_message], :html => { :multipart => true }, :builder => TippedFormBuilder) do |f|
+    %fieldset
+      -if @status_message.errors.any?
+        .errors
+          %h3= t('errors.template.header', :model=> StatusMessage.model_name.human, :count=> @status_message.errors.count)
+          %ul
+            - @status_message.errors.full_messages.each do |msg|
+              %li= msg
+          .clear
+      %ul
+        %li.field.threeColumn.tipped
+          = f.label :title
+          = f.text_field :title
+        %li.field.file.tipped
+          = f.file_field :attachment
+    .buttons
+      %ul
+        %li.toggle= link_to 'Abbrechen', @project
+        %li.submit
+          = f.submit t('helpers.submit.submit', :model=> StatusMessage.model_name.human), :class => "submit"
+      .clear
